Fixed responosvenes issues and cards overlapping

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,5 +1,6 @@
 .card {
-  width: 400px;
+  width: 300px;
+  
 }
 body {
   background: url(../images/felix-mooneeram-222805-unsplash.jpg);
